2011-04-07  Jer Noble  <jer.noble@apple.com>

Reviewed by Eric Carlson.

        HTMLVideoElement::webkitEnterFullscreen does not use new Full Screen API when available.
        https://bugs.webkit.org/show_bug.cgi?id=58070

        Make the HTMLMediaElement full screen functions call into the new Full Screen API when
        FULLSCREEN_API is enabled.

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::enterFullscreen):
        (WebCore::HTMLMediaElement::exitFullscreen):

Canonical link: https://commits.webkit.org/72988@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83208 268f45cc-cd09-0410-ab3c-d52691b4dbfc